# cofe-project

./: .gitignore  manage.py  pyproject.toml
account_app/: admin.py  forms.py  models.py  urls.py  views.py
account_app/migrations/: 0001_initial.py  0002_initial.py
blog_app/: admin.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py  0002_initial.py
core/: ckeditor_config.py  settings.py  urls.py
core/envs/: development.py  production.py
core_app/: admin.py  models.py  urls.py  views.py
core_app/migrations/: 0001_initial.py
discount_app/: admin.py  apps.py  models.py
discount_app/migrations/: 0001_initial.py
notification_app/: admin.py  models.py
notification_app/migrations/: 0001_initial.py
order_app/: admin.py  models.py  urls.py  views.py
order_app/migrations/: 0001_initial.py  0002_initial.py
payment_app/: admin.py  models.py
payment_app/migrations/: 0001_initial.py
product_app/: admin.py  models.py  urls.py  views.py
product_app/migrations/: 0001_initial.py  0002_alter_productmedia_product_file.py
templates/: base.html
templates/auth/: login_password.html  request_otp_phone.html  reset-password.html  verify_otp_phone.html  wellcome.html
templates/partials/blog/: blog.html  category.html  detail-blog-comment.html  detail-post-category.html  detail-post.html  list-post.html  newset_article.html  tags.html
third_party_app/: apps.py
ticket_app/: admin.py  models.py
ticket_app/migrations/: 0001_initial.py
wallet_app/: admin.py  models.py
wallet_app/migrations/: 0001_initial.py
(+52 files in other folders)
